[package]
name = "dht-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1"
rand = "0.8"
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1"
futures = "0.3.1"
env_logger = "0.9.0"
halo2wrong = { git = "https://github.com/privacy-scaling-explorations/halo2wrong.git", branch = "master" }

[dependencies.libp2p]
version = "0.44"
default-features = false
features = [
	"secp256k1",
	"mdns",
	"kad",
	"tcp-async-io",
	"dns-async-std",
	"websocket",
	"noise",
	"mplex",
	"yamux",
]
